[package]
name = "vnc-home"
version = "0.1.0"
authors = ["Daniel Sockwell <daniel@codesections.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap" }
utils = {path = "../utils"}
ssh-home= {path = "../ssh-home"}
d5_cli = {path = "../d5_cli"}
run_script = "0.6.0"
